Criação Soft e Hard Failures

--- a/main/Analise_soft_hard_failure.ipynb
+++ b/main/Analise_soft_hard_failure.ipynb
@@ -2850,27 +2850,40 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Etapa 9: Comparação de Modelos e Conclusão Final",
-   "id": "f80c6ade49b63608"
+   "source": "### Etapa 9: Análise Comparativa, Conclusões e Trabalhos Futuros\n",
+   "id": "3bd065f43763519e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Nesta seção final, consolidamos os resultados obtidos pelas diferentes abordagens de modelagem para fornecer uma análise comparativa, extrair conclusões sobre a eficácia do sistema de detecção de falhas e propor direções para trabalhos futuros.\n",
+   "id": "78b0f69b5c7a02bf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 1. Tabela Comparativa de Desempenho no Conjunto de Teste\n",
+   "id": "bd5cd1f80567ef9b"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Agora que treinamos três abordagens distintas (Baseline, AutoML e Deep Learning), podemos comparar seus resultados de forma objetiva. O foco da avaliação será na capacidade de prever a classe \"Falha\" (classe 1), utilizando as métricas de Precisão, Recall e F1-Score.\n",
+    "Para uma avaliação objetiva, compilamos as métricas de desempenho dos três principais modelos no conjunto de teste. O foco da análise reside na capacidade de cada modelo em identificar corretamente a classe \"Falha\" (1), sem degradar a performance na classe \"Normal\" (0).\n",
     "\n",
-    "#### 1. Tabela Comparativa de Desempenho no Conjunto de Teste\n",
+    "| Modelo | Classe | Precisão | Recall | F1-Score | Suporte |\n",
+    "| :--- | :--- | :---: | :---: | :---: | :---: |\n",
+    "| **Random Forest (Baseline)** | Normal (0) | 0.98 | 0.99 | 0.98 | 18053 |\n",
+    "| | **Falha (1)** | **0.98** | **0.81** | **0.89** | **4236** |\n",
+    "| **Melhor Modelo (AutoML)** | Normal (0) | 0.98 | 0.99 | 0.99 | 18053 |\n",
+    "| | **Falha (1)** | **0.98** | **0.83** | **0.90** | **4236** |\n",
+    "| **LSTM (Deep Learning)** | Normal (0) | 0.98 | 0.99 | 0.99 | 18053 |\n",
+    "| | **Falha (1)** | **0.98** | **0.83** | **0.90** | **4236** |\n",
+    "| **Random Forest (Val. Cruzada)** | **Falha (1)** | - | **0.83** | **0.90** | - |\n",
     "\n",
-    "| Modelo | Precisão (Falha) | Recall (Falha) | F1-Score (Falha) |\n",
-    "| :--- | :---: | :---: | :---: |\n",
-    "| **Random Forest (Baseline)** | 0.98 | 0.81 | 0.89 |\n",
-    "| **Melhor Modelo (AutoML)** | 0.98 | 0.83 | 0.90 |\n",
-    "| **LSTM (Deep Learning)** | 0.98 | 0.83 | 0.90 |\n",
-    "| **Random Forest (Validação Cruzada Média)** | 0.98 | 0.83 | **0.90 ± 0.00** |\n",
-    "\n",
-    "*Valores extraídos dos relatórios de classificação das etapas 4, 6, 7 e 8.*\n"
+    "*Valores extraídos dos relatórios de classificação das etapas 4, 6, 7 e 8. A validação cruzada foca nas métricas da classe de interesse.*\n"
    ],
-   "id": "b4b1faf43cf00ad2"
+   "id": "aea85bd76849f9d2"
   },
   {
    "metadata": {},
@@ -2878,45 +2891,53 @@
    "source": [
     "#### 2. Análise Consolidada dos Resultados\n",
     "\n",
-    "##### a) Comparação dos Modelos\n",
+    "##### a) Comparação de Desempenho dos Modelos\n",
     "\n",
-    "*   **Random Forest (Baseline):** O modelo inicial, mesmo sem otimização extensiva, já apresentou um desempenho excelente, com uma precisão de 98% e um recall de 81% para a classe de falha. Isso demonstra a força das features que foram criadas na etapa de engenharia.\n",
+    "A análise comparativa revela que todas as abordagens alcançaram um alto nível de performance, validando a robustez da engenharia de features realizada.\n",
     "\n",
-    "*   **AutoML e LSTM:** Ambas as abordagens mais avançadas apresentaram um desempenho praticamente idêntico e ligeiramente superior ao baseline. O principal ganho foi no **Recall**, que subiu de 0.81 para 0.83. Isso significa que os modelos otimizados conseguiram identificar corretamente 2% a mais das falhas reais, mantendo a mesma altíssima precisão. Em um cenário de previsão de falhas, um recall maior é extremamente valioso, pois significa menos falhas não detectadas.\n",
+    "*   **Random Forest (Baseline):** O modelo de base, mesmo sem otimização de hiperparâmetros, demonstrou uma eficácia notável, com um F1-Score de 0.89 para a classe de falha. Este resultado sublinha a importância da criação de features de janela deslizante e de tendência, que se mostraram altamente informativas.\n",
     "\n",
-    "*   **Validação Cruzada (Etapa 8):** A validação cruzada confirmou a robustez do modelo. O F1-Score médio para a classe \"Falha\" se manteve em **0.90**, com um desvio padrão (`±`) muito baixo. Isso demonstra que o excelente desempenho não foi um acaso de uma única divisão de treino/teste, mas sim uma característica consistente do modelo.\n",
+    "*   **AutoML e LSTM:** Ambas as abordagens mais sofisticadas convergiram para um desempenho superior, elevando o F1-Score para 0.90. O ganho mais significativo foi no **Recall**, que aumentou de 0.81 para 0.83. Este incremento de 2% no recall é de extrema relevância para o contexto de negócio: significa que o sistema otimizado é capaz de detectar 2 a mais, a cada 100 falhas reais, que o modelo baseline, mantendo a mesma precisão de 98%. Em um cenário de manutenção preditiva, minimizar o número de falhas não detectadas (falsos negativos) é um objetivo primário.\n",
     "\n",
-    "##### b) Análise das Curvas ROC e Precision-Recall (Etapa 8)\n",
-    "\n",
-    "As curvas geradas na Etapa 8 reforçam a qualidade do classificador. A **Curva ROC**, com uma área sob a curva (AUC) de **0.99**, e a **Curva Precision-Recall**, com uma pontuação de precisão média (AP) de **0.95**, indicam um modelo de altíssima performance. A curva P-R, em particular, mostra visualmente que o modelo consegue manter uma precisão elevada mesmo ao tentar alcançar um recall alto, um feito notável em datasets desbalanceados.\n",
+    "*   **Validação Cruzada (Etapa 8):** A metodologia de validação cruzada estratificada confirmou a estabilidade e a capacidade de generalização do modelo. O F1-Score médio de 0.90, com um desvio padrão próximo de zero, indica que o desempenho excepcional não foi um artefato de uma única divisão de dados, mas sim uma característica intrínseca e confiável do modelo.\n",
     "\n",
     "##### b) Análise da Importância das Features (Etapa 5)\n",
     "\n",
-    "O gráfico de \"Feature Importance\" do modelo Random Forest (Etapa 5) nos deu insights cruciais. As features mais importantes foram consistentemente relacionadas à **taxa de erro de bit (BER)**, especialmente o **desvio padrão (`BER_std`)** e a **média (`BER_mean`)** em diferentes janelas de tempo.\n",
+    "A análise de importância das features revelou que os indicadores mais preditivos de uma falha estão relacionados à **taxa de erro de bit (BER)**. Especificamente, o **desvio padrão do BER (`BER_std`)** e a **média do BER (`BER_mean`)** em diferentes janelas temporais emergiram como as features mais influentes.\n",
     "\n",
-    "Isso faz total sentido do ponto de vista técnico:\n",
-    "*   Um **aumento na média do BER** indica uma degradação geral da qualidade do sinal.\n",
-    "*   Um **aumento no desvio padrão do BER** indica instabilidade no sinal, que é um forte precursor de uma falha iminente.\n",
+    "Esta observação é tecnicamente coerente:\n",
+    "*   Um **aumento na média do BER** sinaliza uma degradação contínua e geral na qualidade do sinal óptico.\n",
+    "*   Um **aumento no desvio padrão do BER** indica uma instabilidade crescente no sinal. Flutuações e picos na taxa de erro são precursores clássicos de uma falha iminente, e o modelo aprendeu a capturar este padrão de forma eficaz.\n",
     "\n",
-    "Features de `OSNR` também apareceram como relevantes, o que é esperado, mas o BER se mostrou o indicador predominante.\n"
+    "Features derivadas do OSNR também mostraram relevância, conforme esperado, mas o comportamento do BER provou ser o indicador predominante para a detecção de falhas neste dataset.\n"
    ],
-   "id": "7d1a50301028bbea"
+   "id": "f6400f02e79d2369"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "#### 3. Conclusão\n",
+    "#### 3. Conclusão e Trabalhos Futuros\n",
     "\n",
-    "A engenharia de features, criando variáveis de janela deslizante e de tendência, foi o passo mais impactante para o sucesso dos modelos. O modelo de **Random Forest** já se mostrou uma solução robusta e de fácil implementação.\n",
+    "##### Conclusões\n",
     "\n",
-    "As abordagens mais avançadas, como o uso de **SMOTE para balanceamento**, **AutoML para otimização** e **LSTM para modelagem sequencial**, refinaram o resultado e aumentaram a capacidade de detecção de falhas (recall), o que é crítico para um sistema de manutenção preditiva.\n",
+    "Este trabalho demonstrou com sucesso o desenvolvimento de um sistema de alta performance para a detecção de falhas em redes ópticas, utilizando uma abordagem de classificação supervisionada. A principal contribuição desta pesquisa reside na metodologia de **engenharia de features**, que se provou ser o fator mais crítico para o sucesso preditivo. A transformação de dados brutos de séries temporais em features informativas, como médias, desvios padrão e tendências em janelas deslizantes, permitiu que modelos de machine learning, incluindo um simples Random Forest, alcançassem resultados de alta precisão e recall.\n",
     "\n",
-    "A **Validação Cruzada Estratificada** (Etapa 8) comprovou que o desempenho do modelo é estável e confiável, não dependendo de uma divisão de dados específica.\n",
+    "A aplicação de técnicas avançadas como o balanceamento de dados com **SMOTE** e a otimização de hiperparâmetros com **AutoML** refinaram o desempenho do modelo, aumentando a capacidade de detecção de falhas (recall), o que é um requisito fundamental para sistemas de manutenção preditiva. A robustez do modelo final foi rigorosamente comprovada através de **validação cruzada estratificada**, garantindo que os resultados são estáveis e generalizáveis.\n",
     "\n",
-    "Para um ambiente de produção, o modelo encontrado pelo **AutoML** (neste caso, um `xgboost` ou `lgbm` otimizado) provavelmente seria a melhor escolha, pois oferece um equilíbrio ideal entre performance (superando o baseline) e eficiência de treinamento (sendo mais rápido que a abordagem de Deep Learning). A abordagem com LSTM, embora igualmente eficaz, exige maior custo computacional para treinamento e inferência.\n"
+    "Para um ambiente de produção, o modelo otimizado por AutoML (e.g., XGBoost, LightGBM) representa a escolha mais pragmática, oferecendo um equilíbrio ideal entre a máxima performance de detecção e a eficiência computacional.\n",
+    "\n",
+    "##### Trabalhos Futuros\n",
+    "\n",
+    "Como direções para a evolução deste trabalho, sugere-se:\n",
+    "\n",
+    "1.  **Otimização do Limiar de Decisão:** Realizar um estudo sistemático para ajustar o limiar de classificação (diferente do padrão 0.5) com base na curva Precision-Recall, visando encontrar um ponto de operação que maximize o F1-Score ou que atenda a um requisito mínimo de recall (e.g., \"detectar pelo menos 90% das falhas, mesmo que isso aumente os falsos positivos em X%\").\n",
+    "\n",
+    "2.  **Deployment e Pipeline de Produção:** Desenvolver um pipeline para \"produção\", salvando o modelo treinado, o scaler e a lista de features com `joblib` ou `pickle`. Isso permitiria a criação de uma API ou serviço para realizar a inferência em dados de telemetria em tempo real, sem a necessidade de re-executar o notebook.\n",
+    "\n",
+    "3.  **Análise de Causa Raiz:** Expandir o escopo do problema para uma classificação multiclasse, onde o objetivo seria não apenas detectar a falha, mas também classificar sua natureza (e.g., \"Falha de Software\", \"Falha de Hardware\", \"Degradação de Link\"), caso existam rótulos mais granulares disponíveis.\n"
    ],
-   "id": "adf2678f04cb8273"
+   "id": "1151851d9853eaf9"
   }
  ],
  "metadata": {
